--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,3 +31,86 @@ html, body {
     margin-bottom: 30px;
 }
 
+.month-picker {
+    position: relative;
+    top: -450px;
+    left: 250px;
+    width: 600px;
+    text-align: center;
+  }
+  
+  .month-picker-fieldset {
+    display: inline-block;
+    padding: 0 7px;
+    background: white;
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 0 1px white, inset 0 2px 2px white, 0 1px white;
+    box-shadow: inset 0 0 0 1px white, inset 0 2px 2px white, 0 1px white;
+  }
+  
+  .month-picker-fieldset > input {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+  }
+  
+  .month-picker-label, .month-picker-nav {
+    display: inline-block;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 25px;
+    vertical-align: top;
+    cursor: pointer;
+  }
+  
+  input:focus + .month-picker-label, .month-picker-nav:focus {
+    outline: 2px solid #102770;
+    outline: 5px auto -webkit-focus-ring-color;
+  }
+  
+  .month-picker-label {
+    position: relative;
+    padding: 0 7px;
+    font-size: 12px;
+    font-weight: 200;
+    color: #102770;
+    text-transform: uppercase;
+  }
+  
+  .month-picker-label, .month-picker-label:before {
+    -webkit-transition: 0.15s ease-out;
+    -moz-transition: 0.15s ease-out;
+    -o-transition: 0.15s ease-out;
+    transition: 0.15s ease-out;
+  }
+  
+  .month-picker-label:before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    left: -2px;
+    right: -2px;
+    border: 2px solid;
+    border-color: #e4e0fb #b6b1d1 #b6b1d1;
+    border-radius: 6px;
+    opacity: 0;
+  }
+  
+  input:checked + .month-picker-label {
+    color: white;
+    background: #102770;
+  }
+  
+  input:checked + .month-picker-label:before {
+    opacity: 1;
+  }
+  
+  .month-picker-nav {
+    width: 25px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px white;
+  }
+  
